--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,8 @@
-.App {
-  text-align: center;
-}
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+body {
+  font-family: 'Noto Sans', sans-serif;
+  color: '#333';
+  font-size: 12px;
+  margin: 0px;
 }
